# Code-instrumentor

./: README.md
Jugs/software-testing-case-studies-master/jugs/code/: Makefile  README.md  gtest_jugs.cpp  jugs  jugs.cpp  jugs.h  jugs_instrumented.cpp  main.cpp  test_jugs  test_jugs.cpp  tester.cpp  tester.h  testgen  testgen_main.cpp  testgen_main.h  testgenerator.cpp  testgenerator.h
Jugs/software-testing-case-studies-master/jugs/doc/: dep.dot  go-cfg.dot  singleStep-cfg1.dot  singleStep-cfg2.dot  singleStep-cfg3.dot
Jugs/software-testing-case-studies-master/jugs/doc/notes/: ref.bib  report.tex
MyTool/: CMakeLists.txt  Old_tool.cpp  TXT.txt  jugs_instrumented.cpp  tool copy.cpp  tool.cpp
